--- a/index.html
+++ b/index.html
@@ -6,36 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Base do HTML</title>
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-    <h1>
+
+    <header>
+        <div class="caixa">
+            <h1><img src="logo.png" alt=""></h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
         <h1 class="titulo-principal"> Barbearia Alura</h1>
-        </header>
         <img id="banner" src="banner.jpg">
 
         <div class="principal">
             <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 
             <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
-                para o
-                seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos
-                clientes a
-                cada dia. </p>
+                para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos
+                clientes a cada dia. </p>
 
-            <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos
-                        clientes"</strong></em>.</p>
+            <p id="missao"><em>Nossa missão é: Proporcionar auto-estima e qualidade de vida aos
+                    clientes</em>.</p>
 
             <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui
-                padrão de
-                excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+                padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
         </div>
 
         <div class="beneficios">
             <h3 class="titulo-centralizado">Benefícios</h3>
 
-            <ul>
+            <ul class="lista-principal">
                 <li class="itens">Atendimento aos clientes</li>
                 <li class="itens">Espaço diferenciado</li>
                 <li class="itens">Localização </li>
@@ -44,6 +55,13 @@
 
             <img src="beneficios.jpg" class="imagembeneficios" alt="">
         </div>
+    </main>
+
+    <footer>
+        <img src="logo-branco.png" alt="">
+        <p class="Copyright">&copy;Copyright Barbearia Alura - 2022</p>
+
+    </footer>
 
 </body>
 
