--- a/contato.html
+++ b/contato.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Produtos - Barbearia Alura</title>
+  <title>Contato - Barbearia Alura</title>
   <link rel="stylesheet" href="./reset.css/reset.css">
   <link rel="stylesheet" href="./contato.css">
 </head>
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="caixa">
-      <h1><img src="logo.png" alt="Logo da Barbearia Alura"></h1>
+      <h1><img src="img/logo.png" alt="Logo da Barbearia Alura"></h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -94,6 +94,6 @@
   </main>
 
   <footer>
-    <img src="logo-branco.png" alt="Logo da Barbearia Alura">
+    <img src="img/logo-branco.png" alt="Logo da Barbearia Alura">
     <p class="Copyright">&copy;Copyright Barbearia Alura - 2022</p>
   </footer>
