--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base do HTML</title>
-    <link rel="stylesheet" href="style.css">
-
+    <title>Barbearia Alura</title>
+    <link rel="stylesheet" href="./reset.css/reset.css">
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <header>
         <div class="caixa">
-            <h1><img src="logo.png" alt=""></h1>
+            <h1><img src="img/logo.png" alt=""></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -25,26 +26,43 @@
         </div>
     </header>
 
+
+    <img class="banner" src="img/banner.jpg">
+
     <main>
-        <h1 class="titulo-principal"> Barbearia Alura</h1>
-        <img id="banner" src="banner.jpg">
 
-        <div class="principal">
-            <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+        <section class="principal">
+            <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
-            <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
-                para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos
-                clientes a cada dia. </p>
+            <img class="utensilios" src="img/utensilios.jpg" alt="Utensilhos de um barbeiro">
 
-            <p id="missao"><em>Nossa missão é: Proporcionar auto-estima e qualidade de vida aos
-                    clientes</em>.</p>
+            <p>
+                Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de
+                melhor para o seu cabelo e barba.
+                Fundada em 2019, a Barbearia Alura já é novos clientes a cada dia.
+            </p>
+            <p>
+                <em>Nossa missão é: Proporcionar auto-estima e qualidade de vida aos
+                    clientes.</em>
+            </p>
+            <p>
+                Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui
+                padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
+            </p>
+        </section>
 
-            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui
-                padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-        </div>
+        <section class="mapa">
+            <h3 class="titulo-principal">Nosso estabelecimento</h3>
+            <p>Nosso estabelecimento está localizado no coração da cidade</p>
 
-        <div class="beneficios">
-            <h3 class="titulo-centralizado">Benefícios</h3>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58503.19744076339!2d-46.69824986874998!3d-23.5881948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Escola%20de%20Tecnologia!5e0!3m2!1spt-BR!2sbr!4v1657826092780!5m2!1spt-BR!2sbr"
+                width="100%" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </section>
+
+        <section class="beneficios">
+            <h3 class="titulo-principal">Benefícios</h3>
 
             <ul class="lista-principal">
                 <li class="itens">Atendimento aos clientes</li>
@@ -53,12 +71,12 @@
                 <li class="itens">Profissionais qualificados</li>
             </ul>
 
-            <img src="beneficios.jpg" class="imagembeneficios" alt="">
-        </div>
+        </section>
+        <img src="img/beneficios.jpg" class="imagembeneficios" alt="">
     </main>
 
     <footer>
-        <img src="logo-branco.png" alt="">
+        <img src="img/logo-branco.png" alt="">
         <p class="Copyright">&copy;Copyright Barbearia Alura - 2022</p>
 
     </footer>
